compiler/build/parser.output
Terminals unused in grammar

   TOKEN_COLON
   TOKEN_ERROR


Grammar

    0 $accept: prog $end

    1 prog: decl_list

    2 decl_list: decl decl_list
    3          | /* empty */

    4 decl: type TOKEN_ID TOKEN_SEMI
    5     | type TOKEN_ID TOKEN_EQUAL expr TOKEN_SEMI
    6     | TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    7 stmt_list: stmt stmt_list
    8          | /* empty */

    9 stmt: decl
   10     | expr TOKEN_SEMI
   11     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt
   12     | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt TOKEN_ELSE stmt
   13     | TOKEN_LOOP TOKEN_LPAREN expr TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt
   14     | TOKEN_OUT TOKEN_LPAREN expr TOKEN_RPAREN TOKEN_SEMI
   15     | TOKEN_RET expr TOKEN_SEMI
   16     | TOKEN_LBRACE stmt_list TOKEN_RBRACE

   17 expr: expr TOKEN_PLUS expr
   18     | expr TOKEN_MINUS expr
   19     | expr TOKEN_MUL expr
   20     | expr TOKEN_DIV expr
   21     | expr TOKEN_LT expr
   22     | expr TOKEN_GT expr
   23     | expr TOKEN_INCR
   24     | expr TOKEN_DECR
   25     | TOKEN_INT_LIT
   26     | TOKEN_DEC_LIT
   27     | TOKEN_CHAR_LIT
   28     | TOKEN_STR_LIT
   29     | TOKEN_MINUS expr
   30     | TOKEN_ID
   31     | TOKEN_ID TOKEN_EQUAL expr
   32     | TOKEN_LPAREN expr TOKEN_RPAREN

   33 param_list: param
   34           | param TOKEN_COMMA param_list
   35           | /* empty */

   36 param: type TOKEN_ID

   37 type: TOKEN_INT
   38     | TOKEN_DEC
   39     | TOKEN_CHAR
   40     | TOKEN_STR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ID (258) 4 5 6 30 31 36
TOKEN_INT_LIT (259) 25
TOKEN_DEC_LIT (260) 26
TOKEN_CHAR_LIT (261) 27
TOKEN_STR_LIT (262) 28
TOKEN_INT (263) 37
TOKEN_DEC (264) 38
TOKEN_CHAR (265) 39
TOKEN_STR (266) 40
TOKEN_IF (267) 11 12
TOKEN_ELSE (268) 12
TOKEN_LOOP (269) 13
TOKEN_PROC (270) 6
TOKEN_OUT (271) 14
TOKEN_RET (272) 15
TOKEN_PLUS (273) 17
TOKEN_MINUS (274) 18 29
TOKEN_EQUAL (275) 5 31
TOKEN_MUL (276) 19
TOKEN_DIV (277) 20
TOKEN_INCR (278) 23
TOKEN_DECR (279) 24
TOKEN_LT (280) 21
TOKEN_GT (281) 22
TOKEN_LPAREN (282) 6 11 12 13 14 32
TOKEN_RPAREN (283) 6 11 12 13 14 32
TOKEN_LBRACE (284) 6 16
TOKEN_RBRACE (285) 6 16
TOKEN_COMMA (286) 34
TOKEN_COLON (287)
TOKEN_SEMI (288) 4 5 10 13 14 15
TOKEN_ERROR (289)
"then" (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
prog (37)
    on left: 1, on right: 0
decl_list (38)
    on left: 2 3, on right: 1 2
decl (39)
    on left: 4 5 6, on right: 2 9
stmt_list (40)
    on left: 7 8, on right: 6 7 16
stmt (41)
    on left: 9 10 11 12 13 14 15 16, on right: 7 11 12 13
expr (42)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32, on right:
    5 10 11 12 13 14 15 17 18 19 20 21 22 23 24 29 31 32
param_list (43)
    on left: 33 34 35, on right: 6 34
param (44)
    on left: 36, on right: 33 34
type (45)
    on left: 37 38 39 40, on right: 4 5 6 36


state 0

    0 $accept: . prog $end

    TOKEN_INT   shift, and go to state 1
    TOKEN_DEC   shift, and go to state 2
    TOKEN_CHAR  shift, and go to state 3
    TOKEN_STR   shift, and go to state 4
    TOKEN_PROC  shift, and go to state 5

    $default  reduce using rule 3 (decl_list)

    prog       go to state 6
    decl_list  go to state 7
    decl       go to state 8
    type       go to state 9


state 1

   37 type: TOKEN_INT .

    $default  reduce using rule 37 (type)


state 2

   38 type: TOKEN_DEC .

    $default  reduce using rule 38 (type)


state 3

   39 type: TOKEN_CHAR .

    $default  reduce using rule 39 (type)


state 4

   40 type: TOKEN_STR .

    $default  reduce using rule 40 (type)


state 5

    6 decl: TOKEN_PROC . type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_INT   shift, and go to state 1
    TOKEN_DEC   shift, and go to state 2
    TOKEN_CHAR  shift, and go to state 3
    TOKEN_STR   shift, and go to state 4

    type  go to state 10


state 6

    0 $accept: prog . $end

    $end  shift, and go to state 11


state 7

    1 prog: decl_list .

    $default  reduce using rule 1 (prog)


state 8

    2 decl_list: decl . decl_list

    TOKEN_INT   shift, and go to state 1
    TOKEN_DEC   shift, and go to state 2
    TOKEN_CHAR  shift, and go to state 3
    TOKEN_STR   shift, and go to state 4
    TOKEN_PROC  shift, and go to state 5

    $default  reduce using rule 3 (decl_list)

    decl_list  go to state 12
    decl       go to state 8
    type       go to state 9


state 9

    4 decl: type . TOKEN_ID TOKEN_SEMI
    5     | type . TOKEN_ID TOKEN_EQUAL expr TOKEN_SEMI

    TOKEN_ID  shift, and go to state 13


state 10

    6 decl: TOKEN_PROC type . TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_ID  shift, and go to state 14


state 11

    0 $accept: prog $end .

    $default  accept


state 12

    2 decl_list: decl decl_list .

    $default  reduce using rule 2 (decl_list)


state 13

    4 decl: type TOKEN_ID . TOKEN_SEMI
    5     | type TOKEN_ID . TOKEN_EQUAL expr TOKEN_SEMI

    TOKEN_EQUAL  shift, and go to state 15
    TOKEN_SEMI   shift, and go to state 16


state 14

    6 decl: TOKEN_PROC type TOKEN_ID . TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_LPAREN  shift, and go to state 17


state 15

    5 decl: type TOKEN_ID TOKEN_EQUAL . expr TOKEN_SEMI

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 25


state 16

    4 decl: type TOKEN_ID TOKEN_SEMI .

    $default  reduce using rule 4 (decl)


state 17

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN . param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_INT   shift, and go to state 1
    TOKEN_DEC   shift, and go to state 2
    TOKEN_CHAR  shift, and go to state 3
    TOKEN_STR   shift, and go to state 4

    $default  reduce using rule 35 (param_list)

    param_list  go to state 26
    param       go to state 27
    type        go to state 28


state 18

   30 expr: TOKEN_ID .
   31     | TOKEN_ID . TOKEN_EQUAL expr

    TOKEN_EQUAL  shift, and go to state 29

    $default  reduce using rule 30 (expr)


state 19

   25 expr: TOKEN_INT_LIT .

    $default  reduce using rule 25 (expr)


state 20

   26 expr: TOKEN_DEC_LIT .

    $default  reduce using rule 26 (expr)


state 21

   27 expr: TOKEN_CHAR_LIT .

    $default  reduce using rule 27 (expr)


state 22

   28 expr: TOKEN_STR_LIT .

    $default  reduce using rule 28 (expr)


state 23

   29 expr: TOKEN_MINUS . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 30


state 24

   32 expr: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 31


state 25

    5 decl: type TOKEN_ID TOKEN_EQUAL expr . TOKEN_SEMI
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS   shift, and go to state 32
    TOKEN_MINUS  shift, and go to state 33
    TOKEN_MUL    shift, and go to state 34
    TOKEN_DIV    shift, and go to state 35
    TOKEN_INCR   shift, and go to state 36
    TOKEN_DECR   shift, and go to state 37
    TOKEN_LT     shift, and go to state 38
    TOKEN_GT     shift, and go to state 39
    TOKEN_SEMI   shift, and go to state 40


state 26

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list . TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_RPAREN  shift, and go to state 41


state 27

   33 param_list: param .
   34           | param . TOKEN_COMMA param_list

    TOKEN_COMMA  shift, and go to state 42

    $default  reduce using rule 33 (param_list)


state 28

   36 param: type . TOKEN_ID

    TOKEN_ID  shift, and go to state 43


state 29

   31 expr: TOKEN_ID TOKEN_EQUAL . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 44


state 30

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR
   29     | TOKEN_MINUS expr .

    TOKEN_MUL   shift, and go to state 34
    TOKEN_DIV   shift, and go to state 35
    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37
    TOKEN_LT    shift, and go to state 38
    TOKEN_GT    shift, and go to state 39

    $default  reduce using rule 29 (expr)


state 31

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR
   32     | TOKEN_LPAREN expr . TOKEN_RPAREN

    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_MUL     shift, and go to state 34
    TOKEN_DIV     shift, and go to state 35
    TOKEN_INCR    shift, and go to state 36
    TOKEN_DECR    shift, and go to state 37
    TOKEN_LT      shift, and go to state 38
    TOKEN_GT      shift, and go to state 39
    TOKEN_RPAREN  shift, and go to state 45


state 32

   17 expr: expr TOKEN_PLUS . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 46


state 33

   18 expr: expr TOKEN_MINUS . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 47


state 34

   19 expr: expr TOKEN_MUL . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 48


state 35

   20 expr: expr TOKEN_DIV . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 49


state 36

   23 expr: expr TOKEN_INCR .

    $default  reduce using rule 23 (expr)


state 37

   24 expr: expr TOKEN_DECR .

    $default  reduce using rule 24 (expr)


state 38

   21 expr: expr TOKEN_LT . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 50


state 39

   22 expr: expr TOKEN_GT . expr

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 51


state 40

    5 decl: type TOKEN_ID TOKEN_EQUAL expr TOKEN_SEMI .

    $default  reduce using rule 5 (decl)


state 41

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN . TOKEN_LBRACE stmt_list TOKEN_RBRACE

    TOKEN_LBRACE  shift, and go to state 52


state 42

   34 param_list: param TOKEN_COMMA . param_list

    TOKEN_INT   shift, and go to state 1
    TOKEN_DEC   shift, and go to state 2
    TOKEN_CHAR  shift, and go to state 3
    TOKEN_STR   shift, and go to state 4

    $default  reduce using rule 35 (param_list)

    param_list  go to state 53
    param       go to state 27
    type        go to state 28


state 43

   36 param: type TOKEN_ID .

    $default  reduce using rule 36 (param)


state 44

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR
   31     | TOKEN_ID TOKEN_EQUAL expr .

    TOKEN_PLUS   shift, and go to state 32
    TOKEN_MINUS  shift, and go to state 33
    TOKEN_MUL    shift, and go to state 34
    TOKEN_DIV    shift, and go to state 35
    TOKEN_INCR   shift, and go to state 36
    TOKEN_DECR   shift, and go to state 37
    TOKEN_LT     shift, and go to state 38
    TOKEN_GT     shift, and go to state 39

    $default  reduce using rule 31 (expr)


state 45

   32 expr: TOKEN_LPAREN expr TOKEN_RPAREN .

    $default  reduce using rule 32 (expr)


state 46

   17 expr: expr . TOKEN_PLUS expr
   17     | expr TOKEN_PLUS expr .
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_MUL   shift, and go to state 34
    TOKEN_DIV   shift, and go to state 35
    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37
    TOKEN_LT    shift, and go to state 38
    TOKEN_GT    shift, and go to state 39

    $default  reduce using rule 17 (expr)


state 47

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   18     | expr TOKEN_MINUS expr .
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_MUL   shift, and go to state 34
    TOKEN_DIV   shift, and go to state 35
    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37
    TOKEN_LT    shift, and go to state 38
    TOKEN_GT    shift, and go to state 39

    $default  reduce using rule 18 (expr)


state 48

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   19     | expr TOKEN_MUL expr .
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37
    TOKEN_LT    shift, and go to state 38
    TOKEN_GT    shift, and go to state 39

    $default  reduce using rule 19 (expr)


state 49

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   20     | expr TOKEN_DIV expr .
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37
    TOKEN_LT    shift, and go to state 38
    TOKEN_GT    shift, and go to state 39

    $default  reduce using rule 20 (expr)


state 50

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   21     | expr TOKEN_LT expr .
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37

    $default  reduce using rule 21 (expr)


state 51

   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   22     | expr TOKEN_GT expr .
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_INCR  shift, and go to state 36
    TOKEN_DECR  shift, and go to state 37

    $default  reduce using rule 22 (expr)


state 52

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE . stmt_list TOKEN_RBRACE

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_INT       shift, and go to state 1
    TOKEN_DEC       shift, and go to state 2
    TOKEN_CHAR      shift, and go to state 3
    TOKEN_STR       shift, and go to state 4
    TOKEN_IF        shift, and go to state 54
    TOKEN_LOOP      shift, and go to state 55
    TOKEN_PROC      shift, and go to state 5
    TOKEN_OUT       shift, and go to state 56
    TOKEN_RET       shift, and go to state 57
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24
    TOKEN_LBRACE    shift, and go to state 58

    $default  reduce using rule 8 (stmt_list)

    decl       go to state 59
    stmt_list  go to state 60
    stmt       go to state 61
    expr       go to state 62
    type       go to state 9


state 53

   34 param_list: param TOKEN_COMMA param_list .

    $default  reduce using rule 34 (param_list)


state 54

   11 stmt: TOKEN_IF . TOKEN_LPAREN expr TOKEN_RPAREN stmt
   12     | TOKEN_IF . TOKEN_LPAREN expr TOKEN_RPAREN stmt TOKEN_ELSE stmt

    TOKEN_LPAREN  shift, and go to state 63


state 55

   13 stmt: TOKEN_LOOP . TOKEN_LPAREN expr TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt

    TOKEN_LPAREN  shift, and go to state 64


state 56

   14 stmt: TOKEN_OUT . TOKEN_LPAREN expr TOKEN_RPAREN TOKEN_SEMI

    TOKEN_LPAREN  shift, and go to state 65


state 57

   15 stmt: TOKEN_RET . expr TOKEN_SEMI

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 66


state 58

   16 stmt: TOKEN_LBRACE . stmt_list TOKEN_RBRACE

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_INT       shift, and go to state 1
    TOKEN_DEC       shift, and go to state 2
    TOKEN_CHAR      shift, and go to state 3
    TOKEN_STR       shift, and go to state 4
    TOKEN_IF        shift, and go to state 54
    TOKEN_LOOP      shift, and go to state 55
    TOKEN_PROC      shift, and go to state 5
    TOKEN_OUT       shift, and go to state 56
    TOKEN_RET       shift, and go to state 57
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24
    TOKEN_LBRACE    shift, and go to state 58

    $default  reduce using rule 8 (stmt_list)

    decl       go to state 59
    stmt_list  go to state 67
    stmt       go to state 61
    expr       go to state 62
    type       go to state 9


state 59

    9 stmt: decl .

    $default  reduce using rule 9 (stmt)


state 60

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list . TOKEN_RBRACE

    TOKEN_RBRACE  shift, and go to state 68


state 61

    7 stmt_list: stmt . stmt_list

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_INT       shift, and go to state 1
    TOKEN_DEC       shift, and go to state 2
    TOKEN_CHAR      shift, and go to state 3
    TOKEN_STR       shift, and go to state 4
    TOKEN_IF        shift, and go to state 54
    TOKEN_LOOP      shift, and go to state 55
    TOKEN_PROC      shift, and go to state 5
    TOKEN_OUT       shift, and go to state 56
    TOKEN_RET       shift, and go to state 57
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24
    TOKEN_LBRACE    shift, and go to state 58

    $default  reduce using rule 8 (stmt_list)

    decl       go to state 59
    stmt_list  go to state 69
    stmt       go to state 61
    expr       go to state 62
    type       go to state 9


state 62

   10 stmt: expr . TOKEN_SEMI
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS   shift, and go to state 32
    TOKEN_MINUS  shift, and go to state 33
    TOKEN_MUL    shift, and go to state 34
    TOKEN_DIV    shift, and go to state 35
    TOKEN_INCR   shift, and go to state 36
    TOKEN_DECR   shift, and go to state 37
    TOKEN_LT     shift, and go to state 38
    TOKEN_GT     shift, and go to state 39
    TOKEN_SEMI   shift, and go to state 70


state 63

   11 stmt: TOKEN_IF TOKEN_LPAREN . expr TOKEN_RPAREN stmt
   12     | TOKEN_IF TOKEN_LPAREN . expr TOKEN_RPAREN stmt TOKEN_ELSE stmt

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 71


state 64

   13 stmt: TOKEN_LOOP TOKEN_LPAREN . expr TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 72


state 65

   14 stmt: TOKEN_OUT TOKEN_LPAREN . expr TOKEN_RPAREN TOKEN_SEMI

    TOKEN_ID        shift, and go to state 18
    TOKEN_INT_LIT   shift, and go to state 19
    TOKEN_DEC_LIT   shift, and go to state 20
    TOKEN_CHAR_LIT  shift, and go to state 21
    TOKEN_STR_LIT   shift, and go to state 22
    TOKEN_MINUS     shift, and go to state 23
    TOKEN_LPAREN    shift, and go to state 24

    expr  go to state 73


state 66

   15 stmt: TOKEN_RET expr . TOKEN_SEMI
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS   shift, and go to state 32
    TOKEN_MINUS  shift, and go to state 33
    TOKEN_MUL    shift, and go to state 34
    TOKEN_DIV    shift, and go to state 35
    TOKEN_INCR   shift, and go to state 36
    TOKEN_DECR   shift, and go to state 37
    TOKEN_LT     shift, and go to state 38
    TOKEN_GT     shift, and go to state 39
    TOKEN_SEMI   shift, and go to state 74


state 67

   16 stmt: TOKEN_LBRACE stmt_list . TOKEN_RBRACE

    TOKEN_RBRACE  shift, and go to state 75


state 68

    6 decl: TOKEN_PROC type TOKEN_ID TOKEN_LPAREN param_list TOKEN_RPAREN TOKEN_LBRACE stmt_list TOKEN_RBRACE .

    $default  reduce using rule 6 (decl)


state 69

    7 stmt_list: stmt stmt_list .

    $default  reduce using rule 7 (stmt_list)


state 70

   10 stmt: expr TOKEN_SEMI .

    $default  reduce using rule 10 (stmt)


state 71

   11 stmt: TOKEN_IF TOKEN_LPAREN expr . TOKEN_RPAREN stmt
   12     | TOKEN_IF TOKEN_LPAREN expr . TOKEN_RPAREN stmt TOKEN_ELSE stmt
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_MUL     shift, and go to state 34
    TOKEN_DIV     shift, and go to state 35
    TOKEN_INCR    shift, and go to state 36
    TOKEN_DECR    shift, and go to state 37
    TOKEN_LT      shift, and go to state 38
    TOKEN_GT      shift, and go to state 39
    TOKEN_RPAREN  shift, and go to state 76


state 72

   13 stmt: TOKEN_LOOP TOKEN_LPAREN expr . TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS   shift, and go to state 32
    TOKEN_MINUS  shift, and go to state 33
    TOKEN_MUL    shift, and go to state 34
    TOKEN_DIV    shift, and go to state 35
    TOKEN_INCR   shift, and go to state 36
    TOKEN_DECR   shift, and go to state 37
    TOKEN_LT     shift, and go to state 38
    TOKEN_GT     shift, and go to state 39
    TOKEN_SEMI   shift, and go to state 77


state 73

   14 stmt: TOKEN_OUT TOKEN_LPAREN expr . TOKEN_RPAREN TOKEN_SEMI
   17 expr: expr . TOKEN_PLUS expr
   18     | expr . TOKEN_MINUS expr
   19     | expr . TOKEN_MUL expr
   20     | expr . TOKEN_DIV expr
   21     | expr . TOKEN_LT expr
   22     | expr . TOKEN_GT expr
   23     | expr . TOKEN_INCR
   24     | expr . TOKEN_DECR

    TOKEN_PLUS    shift, and go to state 32
    TOKEN_MINUS   shift, and go to state 33
    TOKEN_MUL     shift, and go to state 34
    TOKEN_DIV     shift, and go to state 35
    TOKEN_INCR    shift, and go to state 36
    TOKEN_DECR    shift, and go to state 37
    TOKEN_LT      shift, and go to state 38
    TOKEN_GT      shift, and go to state 39
    TOKEN_RPAREN  shift, and go to state 78


state 74

   15 stmt: TOKEN_RET expr TOKEN_SEMI .

    $default  reduce using rule 15 (stmt)


state 75
